# bidding-ai-analyzer

./: .gitignore  LICENSE  README.en.md  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/src/bidding_ai_analyzer/: __init__.py  __main__.py  cli.py  config.py  task_manager.py
backend/src/bidding_ai_analyzer/analyzer/: __init__.py  engine.py
backend/src/bidding_ai_analyzer/api/: main.py  models.py
backend/src/bidding_ai_analyzer/api/routes/: export.py  keywords.py  results.py  tasks.py
backend/src/bidding_ai_analyzer/spider/: __init__.py  base.py  utils.py
backend/src/bidding_ai_analyzer/strategies/: __init__.py  ccgp.py  other.py
backend/tests/: conftest.py  test_analyzer.py  test_analyzer_e2e.py  test_spider.py
docs/: ARCHITECTURE.md  PRD.md
frontend/: .gitignore  package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/tasks/: page.tsx
frontend/src/app/tasks/[id]/: page.tsx
frontend/src/app/tasks/create/: page.tsx
frontend/src/components/layout/: Navbar.tsx  Sidebar.tsx
frontend/src/hooks/: useApi.ts  useTaskPolling.ts
frontend/src/lib/: api.ts  types.ts
scripts/: dev.sh  setup.sh
